# audio-equalizer

./: .gitignore  README.md  ensure_apo.ps1  setup_link.ps1
LiveEqualizer/: CMakeLists.txt
LiveEqualizer/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
